--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <main>
                 <section class="phr1">
-                    <img src="./img/quotes.png" alt="">
+                    <img src="./img/quotes.png" alt="쌍따옴표">
                     <p><span>1만 시간의 법칙</span>은</br>어떤 분야의 전문가가 되기 위해서는</br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.</p>
                 </section>
     
@@ -32,7 +32,7 @@
                 <button class="btn1">
                     <p>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</p>
                 </button>
-                <img class="click" src="./img/click.png" alt="">
+                <img class="click" src="./img/click.png" alt="클릭을 유도하는 손">
     
                 <section class="phr3">
                     <p>당신은 <span>프로그래밍</span> 전문가가 되기 위해서</p>
