랜딩 페이지 index.html 수정

--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -22,8 +22,52 @@
 
         <main>
             <section class="section-hero">
-                
+                <div class="hero-content">
+                    <h2>Lorem Ipsum is simply dummy text of the printing and</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
+                    <button>Download</button>
+                </div>
+                <img src="./img/box-cat.png" alt="박스를 뒤집어쓴 고양이">
+            </section>
+            <section class="section-container">
+                <div class="section-feature-01">
+                    <img src="./img/img_4.jpg" alt="누워있는 고양이">
+                    <div class="feature-content">
+                        <h3>Lorem Ipsum is simply dummy text of the printing and dummy text</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                </div>
+                <div class="section-feature-02">
+                    <div class="feature-header">
+                        <h3>dummy text of the printing and dummy</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
+                    </div>
+                    <div class="card-grid">
+                        <img src="./img/img_1.jpg" alt="캣타워 위에서 고개만 내놓고 있는 고양이">
+                        <img src="./img/img_2.jpg" alt="뒤돌아 앉아있는 조랭이떡 고양이">
+                        <img src="./img/img_3.jpg" alt="앉아서 쳐다보고 있는 고양이">
+                    </div>
+                    <div class="feature-footer">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="section-feature-03">
+                    <div class="newsletter-content">
+                        <h3>Subscribe to our Blog post</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
+                        <div class="newletter-form">
+                            <img src="./img/email-icon.svg" alt="이메일 아이콘">
+                            <input type="text" id="address" placeholder="Enter your e-mail address" />
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
+        <img src="./img/img_5.jpg" alt="">
+        <footer>
+
+        </footer>
     </body>
 </html>
