--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -43,7 +43,7 @@
                 <div class="section-feature-02">
                     <div class="feature-header">
                         <h3>dummy text of the printing and dummy</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
+                        <p>Lorem Ipsum is simply <span>dummy text</span> of the printing and typesetting industry.<br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
                     </div>
                     <div class="card-grid">
                         <img src="./img/img_1.jpg" alt="캣타워 위에서 고개만 내놓고 있는 고양이">
@@ -51,23 +51,23 @@
                         <img src="./img/img_3.jpg" alt="앉아서 쳐다보고 있는 고양이">
                     </div>
                     <div class="feature-footer">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                        <button>Learn More</button>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                        <button class="btn-learn">Learn More</button>
                     </div>
                 </div>
                 <div class="section-feature-03">
                     <div class="newsletter-content">
                         <h3>Subscribe to our Blog post</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
-                        <div class="newletter-form">
-                            <img src="./img/email-icon.svg" alt="이메일 아이콘">
-                            <input type="text" id="address" placeholder="Enter your e-mail address" />
-                            <button>Subscribe</button>
-                        </div>
+                    </div>
+                    <div class="newletter-form">
+                        <img src="./img/email-icon.svg" alt="이메일 아이콘">
+                        <input type="text" id="address" placeholder="            Enter your e-mail address" />
+                        <button class="btn-sub">Subscribe</button>
                     </div>
                 </div>
             </section>
-            <img src="./img/img_5.jpg" alt="">
+            <div class="img"></div>
             <botton class="scroll-top-btn">
                 <img src="./img/top-btn.svg" alt="페이지 맨 위로 이동">
             </botton>
