--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -11,7 +11,7 @@
 
         <header>
             <div class="container_navigation-bar">
-                <img src="./img/logo.svg" alt="HODU 로고">
+                <img class="logo" src="./img/logo.svg" alt="HODU 로고">
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -20,6 +20,7 @@
                     </ul>
                     <button class="btn-download">Download</button>
                 </nav>
+                <img class="menu" src="./img/menu.svg" alt="">
             </div>
         </header>
 
@@ -30,11 +31,11 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
                     <button class="btn-download">Download</button>
                 </div>
-                <img src="./img/box-cat.png" alt="박스를 뒤집어쓴 고양이">
+                <div class="img_1"></div>
             </section>
             <section class="section-container">
                 <div class="section-feature-01">
-                    <img src="./img/img_4.jpg" alt="누워있는 고양이">
+                    <div class="img_4"></div>
                     <div class="feature-content">
                         <h3>Lorem Ipsum is simply dummy text of the printing and dummy text</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -67,14 +68,13 @@
                     </div>
                 </div>
             </section>
-            <div class="img"></div>
-            <botton class="scroll-top-btn">
-                <img src="./img/top-btn.svg" alt="페이지 맨 위로 이동">
-            </botton>
+            <div class="img_5">
+                <div class="background"></div>
+            </div>
         </main>
         <footer>
             <img src="./img/logo.svg" alt="HODU 로고">
-            <div class="social icons">
+            <div class="social-icons">
                 <div class="icon-blog">
                     <img src="./img/blog.svg" alt="블로그 바로가기">
                 </div>
@@ -89,6 +89,10 @@
                 </div>
             </div>
         </footer>
+
+        <botton class="scroll-top-btn">
+            <img src="./img/top-btn.svg" alt="페이지 맨 위로 이동">
+        </botton>
 
         <section class="modal">
             <div class="container">
