랜딩 페이지 모바일 화면  footer 수정

--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -88,6 +88,14 @@
                     <img src="./img/youtube.svg" alt="유튜브 바로가기">
                 </div>
             </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li>About</li>
+                    <li>Blog</li>
+                    <li>Support</li>
+                    <li>Terms of Use</li>
+                </ul>
+            </nav>
         </footer>
 
         <botton class="scroll-top-btn">
