--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -90,24 +90,40 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Support</li>
-                    <li>Terms of Use</li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Terms of Use</a></li>
                 </ul>
             </nav>
         </footer>
 
-        <botton class="scroll-top-btn">
-            <img src="./img/top-btn.svg" alt="페이지 맨 위로 이동">
-        </botton>
+        <button class="scroll-top-btn">
+            <img class="top-btn" src="./img/top-btn.svg" alt="페이지 맨 위로 이동">
+            <img class="top-btn-hover" src="./img/top-btn-hover.svg" alt="페이지 맨 위로 이동">
+        </button>
 
         <section class="modal">
+            <img src="./img/modal-bg-img.png" alt="">
             <div class="container">
                 <img src="./img/cat-subscribe.png" alt="볼빨간 고양이">
                 <h2>Thank you!</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing industry.</p>
                 <button>OK! I Love HODU</button>
+            </div>
+        </section>
+
+        <section class="modal2">
+            <div class="menu-tab">
+                <img src="./img/arrow-right.svg" alt="돌아가기">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </nav>
+                <button class="btn-download">Download</button>
             </div>
         </section>
     </body>
